--- a/Company.MaintenanceApplication.Data/Company.MaintenanceApplication.Data.csproj
+++ b/Company.MaintenanceApplication.Data/Company.MaintenanceApplication.Data.csproj
@@ -49,17 +49,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IMaintenanceDBContext.cs" />
     <Compile Include="MaintenanceDBContext.cs" />
     <Compile Include="Models\EquipmentMaster.cs" />
     <Compile Include="Models\EquipmentTagMaster.cs" />
     <Compile Include="Models\Maintenance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="Repository\Repository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="UnitOfWork\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
