--- a/Company.MaintenanceApplication/Properties/launchSettings.json
+++ b/Company.MaintenanceApplication/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Developement"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "Company.MaintenanceApplication": {
