--- a/Company.MaintenanceApplication/Properties/launchSettings.json
+++ b/Company.MaintenanceApplication/Properties/launchSettings.json
@@ -1,19 +1,19 @@
-﻿{
+{
   "iisSettings": {
-    "windowsAuthentication": false,
+    "windowsAuthentication": true,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:63716/",
-      "sslPort": 0
+      "applicationUrl": "https://localhost:44333/",
+      "sslPort": 44333
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-        "environmentVariables": {
-            "ASPNETCORE_ENVIRONMENT": "Development"
-        }
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     },
     "Company.MaintenanceApplication": {
       "commandName": "Project",
