--- a/Company.MaintenanceApplication/Company.MaintenanceApplication.csproj
+++ b/Company.MaintenanceApplication/Company.MaintenanceApplication.csproj
@@ -16,6 +16,7 @@
     <Content Include="wwwroot\images\image4.jpg" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="1.16.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.1" />
