.NET Core support added

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,13 @@
-image: Visual Studio 2015
-branches:
-  only:
-    - master 
-    - /^(.*\/)?ci-.*$/
+version: 1.0.{build}
+os: Windows Server 2012 R2
+build:
+  verbosity: minimal
 install:
-  - ps: Install-Product node 6
-clone_depth: 1
+ - cmd: nuget sources add -Name api.nuget.org -Source https://api.nuget.org/v3/index.json
+ - ps: "&{$Branch='dev';iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/aspnet/Home/dev/dnvminstall.ps1'))}"
+ - ps: dnvm install 1.0.0-rc1-update1
+ - ps: dnvm use 1.0.0-rc1-update1
+before_build:
+ - ps: dnu restore
 test: off
 deploy: off
-os: Visual Studio 2017
