Changed the dnx installayion link

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ build:
 install:
 #  - cmd: nuget sources add -Name Nuget.org -Source https://api.nuget.org/v3/index.json
 #  - cmd: nuget sources add -Name AspNetVNext -Source https://dotnet.myget.org/F/aspnetcore-dev/api/v3/index.json
- - ps: "&{$Branch='dev';iex ((new-object net.webclient).DownloadString('https://github.com/dotnet/cli/blob/master/scripts/obtain/dotnet-install.ps1'))}"
+ - ps: "&{$Branch='dev';iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/dotnet/cli/master/scripts/obtain/dotnet-install.ps1'))}"
  - ps: dnvm install 1.0.0-rc1-update1
  - ps: dnvm use 1.0.0-rc1-update1
 before_build:
