--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ build:
 install:
 #  - cmd: nuget sources add -Name Nuget.org -Source https://api.nuget.org/v3/index.json
 #  - cmd: nuget sources add -Name AspNetVNext -Source https://dotnet.myget.org/F/aspnetcore-dev/api/v3/index.json
- - ps: "&{$Branch='dev';iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/dotnet/cli/master/scripts/obtain/dotnet-install.ps1'))}"
+ - ps: "&{$Branch='dev';iex ((new-object net.webclient).DownloadString('https://gist.githubusercontent.com/pksivanantham/393ee4ca2b035da6e1b72cbd3e9aed46/raw/b8b436c9806e1a8d8fd99d733c1ceb539f7ff285/dnxinstall.ps1'))}"
  - ps: dnvm install 1.0.0.0
  - ps: dnvm use 1.0.0.0
 before_build:
