Travis badges added to markdown file travis build script updated

--- a/travis.yml
+++ b/travis.yml
@@ -12,8 +12,8 @@ matrix:
 
 script:
   # Run a new console app
-  - mkdir -p "test/test-dotnet-new" && pushd "test/test-dotnet-new"
-  - dotnet new
+  # - mkdir -p "test/test-dotnet-new" && pushd "test/test-dotnet-new"
+  # - dotnet new
   - dotnet restore
-  - dotnet --verbose run a b
-  - popd
+  # - dotnet --verbose run a b
+  # - popd
