--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,27 @@ matrix:
     - os: osx # OSX 10.11
       osx_image: xcode7.2
       dotnet: 1.0.0-preview2-003121
+branches:
+  only:
+  - master
+
+addons:
+  apt:
+    sources:
+    - sourceline: 'deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main'
+      key_url: 'https://apt-mo.trafficmanager.net/keys/microsoft.asc'
+    packages:
+    - dotnet-dev-1.0.1
+
+before_script:
+  dotnet restore
 
 script:
+  dotnet build
+# script:
   # Run a new console app
   # - mkdir -p "test/test-dotnet-new" && pushd "test/test-dotnet-new"
   # - dotnet new
-  - dotnet restore
+  # - dotnet restore
   # - dotnet --verbose run a b
   # - popd
