Project upgraded to core 2.x

--- a/Company.MaintenanceApplication.Data/App.Config
+++ b/Company.MaintenanceApplication.Data/App.Config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="MaintenanceDBContext" connectionString="data source=SIVA\SQLEXPRESS;initial catalog=MaintenanceDev;user id=sa;password=Sqlexpress2016;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="MaintenanceDBContext" connectionString="data source=MURU-XPS;Database=MaintenanceDev;Integrated Security=True;MultipleActiveResultSets=true;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
