1.app settings updated 2.Mailbox details should be configured in user-secrets before using it in application

--- a/Company.MaintenanceApplication/appsettings.json
+++ b/Company.MaintenanceApplication/appsettings.json
@@ -8,4 +8,9 @@
       "Default": "Warning"
     }
   }
+  //"MailBoxUserName": "",
+  //"MailBoxUserDisplayName": "Sivanantham Padikkasu",
+  //"MailBoxPrivateKey": "",
+  //"MailBoxPassword": "",
+  //"MailBoxHost": "smtp.gmail.com",
 }
